--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "client",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.9.0",
+    "antd": "^5.9.2",
     "axios": "^1.5.0",
     "braintree-web-drop-in-react": "^1.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-image-gallery": "^1.3.0",
     "react-image-turntable": "^3.0.2",
-    "react-router-dom": "^6.15.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
