--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.9.2",
     "axios": "^1.5.0",
     "braintree-web-drop-in-react": "^1.2.1",
+    "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
